# ChangeLog for dev-haskell/blaze-html
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/blaze-html/ChangeLog,v 1.10 2013/12/10 10:10:44 gienah Exp $

*blaze-html-0.6.1.2 (10 Dec 2013)

  10 Dec 2013; Mark Wright <gienah@gentoo.org> +blaze-html-0.6.1.2.ebuild:
  Bump blaze-html to 0.6.1.2

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> blaze-html-0.6.1.1.ebuild:
  Stable for x86, wrt bug #488750

  05 Nov 2013; Tony Vroon <chainsaw@gentoo.org> blaze-html-0.6.1.1.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani in bug #488750.

*blaze-html-0.6.1.1 (02 Apr 2013)

  02 Apr 2013; Mark Wright <gienah@gentoo.org> +blaze-html-0.6.1.1.ebuild:
  Bump blaze-html to 0.6.1.1

*blaze-html-0.5.1.3 (22 Dec 2012)

  22 Dec 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +blaze-html-0.5.1.3.ebuild, -blaze-html-0.4.3.1.ebuild,
  -blaze-html-0.5.0.0.ebuild:
  Version bump.

*blaze-html-0.5.1.0 (18 Nov 2012)

  18 Nov 2012; Mark Wright <gienah@gentoo.org> +blaze-html-0.5.1.0.ebuild:
  Bump blaze-html to 0.5.1.0

  12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org>
  blaze-html-0.4.3.1.ebuild, blaze-html-0.4.3.3.ebuild,
  blaze-html-0.5.0.0.ebuild:
  move dev-haskell/blaze-html/blaze-html-0.4.3.1.ebuild ebuild to
  mirror://hackage

*blaze-html-0.5.0.0 (02 Jun 2012)

  02 Jun 2012; Mark Wright <gienah@gentoo.org> +blaze-html-0.5.0.0.ebuild:
  Bump blaze-html to 0.5.0.0

*blaze-html-0.4.3.3 (07 Apr 2012)

  07 Apr 2012; Mark Wright <gienah@gentoo.org> +blaze-html-0.4.3.3.ebuild:
  Bump blaze-html to 0.4.3.3

*blaze-html-0.4.3.1 (10 Mar 2012)

  10 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +blaze-html-0.4.3.1.ebuild, +metadata.xml:
  Initial version. Fast HTML generation library from haskell values. A depend
  for app-text/pandoc-1.9.