@@ -6,17 +6,25 @@ DIST blaze-html-0.5.1.0.tar.gz 77460 SHA256 b0e3cacac02136290664b9ad4b6200d7f1ee
 DIST blaze-html-0.5.1.3.tar.gz 77446 SHA256 3c40a8a1169207baea6267ce2b657f9d0d136e023815c48931875143c6bc4745 SHA512 e7085f2ad7ea23d80f56a5f076e0a690f7cd565b9a16dcac8875dcb99ee5aa243f33d8fce0b28e63159710d3dc12387b6a34d312f54efb5b6c318d5938f7bf8b WHIRLPOOL cfb93e3701e469ed863c46910f70886651ac06eadec9f98d38b949dded5d743595fb89e66b6f30863e708596d2af092fa017166735075f59c486f924cfaa9169
 DIST blaze-html-0.6.1.1.tar.gz 77759 SHA256 2cafc98ccbb3b9dc9c444ae306337b2aa7fd0be54b650bf208a656a8f6acee23 SHA512 c39447567c5e4788b209bcd94db302c367324ac541b96bd57bb6cfe7b4f2f8bcf7afcf5c168bcfbe1408f4658f1436798ac47decc46d8bb51b3a4609c7ee6a1a WHIRLPOOL 640555c3a797ac4f6e1247145cc8c4dc18b7dc0ee8836ef8f58a2a38f4c28d8e3ecf9f3a021a3eb4fe64299f7c51a4cb5c66193f25bcb3b22c86457ed4797953
 DIST blaze-html-0.6.1.2.tar.gz 75673 SHA256 f57ce483c0082fc5091b744e52914a66c8e2622927e635cca9310c0fc87d4925 SHA512 15b655ce35adc8e9a139780788a2b615ed095468bcb0be3074f0d90bcfe4966ea4705d088b9c9426a469e279c2a0da8081298c4f356194d5c8d7c4046d8e7f19 WHIRLPOOL 96e83764ae7cbb8ea1c58cd3ad814eff814a83c4977a93b12552d2521a09baaf82b00831217b4ab9ccf5541fa37f36e7dd94248a0eb97a78882e98a8124e33c9
+DIST blaze-html-0.6.1.3.tar.gz 75658 SHA256 58154cc9daeccfb487dcd8d93951e6f5cc1d4052374af758e4e01cb1e3885e42 SHA512 2edfff6880d860201cc6de57c07ddee7875bdaca4e2a0a7a9373e080b15e2f6ad0dee1abd37eabce0ecc827bb3a0140358630497684760d636600c55bbf935ac WHIRLPOOL d296b033fc1c7c4cc1160a2bd3aabae406f380c085265c2ab1dfe58c04e767ba01f3f1f1d37109ea11e67a2d0e8558d27a613c1af9c8a9a327227cd45e92dfb6
 EBUILD blaze-html-0.4.3.3.ebuild 1141 SHA256 0816fe76534b79c7a1846771dae3c8a93991b088e9d7fda41174f67e8e7e8ef4 SHA512 1076d90dc0086e5e4943cb76b26f27b110d561d1f3d5a95ecaa4ebaf1ea8e82662618c358f652a62cc6ba355dc812bd2ad8e6f5c4cd259869de73a9dddea5b4e WHIRLPOOL 30f2949d712e9f07191211cd3e50518d798cc29384f9770a2e93c0ed403405b9861f0b25d80566e5930116b2bfbfd3a05b153207846bd706670ed780699d780f
 EBUILD blaze-html-0.5.1.0.ebuild 1485 SHA256 34e5facce51a1cd6910da4d390b53159c548578089831c4d4d908a200686ae55 SHA512 fabf79437f1b43bbfa57209a0886934cf65e4da2bbceb73011a9113d167306ffb5b147122d5044abf456f3cf96b49be2377a9f9225eae9a595760201d7d233ce WHIRLPOOL e676a3556ae7b91db946415e8cbc4b19bdd235b2c04439af4c68b2d8f2fe056fa0459f13a8a57325322b9aef06adae072ed2443f0dc17567533831192c7e3a26
 EBUILD blaze-html-0.5.1.3.ebuild 1290 SHA256 107ef99ad9b313246c6c81ba5d9e9ac6846671de92fd2d0c96a88ec8e2bb96c0 SHA512 47694934477befcbd74af3e6fda6d598a1712de244fd51b9cf6414592b3f84480f780c23f0de8592dd5e4b2828513c84e5e02a5615943a8e38ee84fea8c70a36 WHIRLPOOL 6a6c9a991128946ce7189b2c7290067756d892f358fc31b881169943420f05821c662768e942c046b231986400edf18e731c7b1061988158819e4e394468c0f2
 EBUILD blaze-html-0.6.1.1.ebuild 1197 SHA256 fdaa9c9c374b1604bfc76188a550ff9ba8d18ccae6c8583d4ecfd0f8ba625ce5 SHA512 dbdeee8a89ee2ef96355843be86378d00a9406efdc55c7b96e468aa91d79e91264221f7eeae3b959ed0c7400a5ae450402849a1d01a6821806cfdba43348d292 WHIRLPOOL 06738fcf127d2ba92288796f2ea4707d5d8b56afc6f4adf142f156a0b544f1742c69fc67a6fbd8814bb79934439a79a157e5e686eb66d0a85e123b721efec11e
-EBUILD blaze-html-0.6.1.2.ebuild 1285 SHA256 df7bb3105bf817424e17422b48200160be0bfd33dc42cd441fdca414d13416ae SHA512 4232e244495ab23e00e106dec29a027c8b7ecf2acd84f99ae7b5b823902f520fdfa498470de81fdce41d8cacb56f2ee646e288a719f4f321eeb2475f8cb12c43 WHIRLPOOL a6712f998c092220fa47e9382ad9a4d7eb08b92477933fa978edddc92c1fdb4ff70c0a463ce72c4a76dc5a396ec53652d2a6441255927e8185a18f288ee96f2d
-MISC ChangeLog 1863 SHA256 37691497fbe5d0e8aaea27f928410c301bcb4f73da1c1314909dc56add0bd34d SHA512 342ea25a1be7638cc43797db61c19b87e9e9edf8d9b4879154fcb1f74a73f0f94c2fbcd653032b8bc9916af6fd7809bb929f134c3b20df323e47ae30cfa902e5 WHIRLPOOL add4cc6330044d647d82f6885eaedb2647c0b64aad8a27e35aa88f4cc246db9084e290cdc15165c99c12635563424f192e3881ae16533bb8f6d35b1a1a71ae06
+EBUILD blaze-html-0.6.1.2.ebuild 1284 SHA256 e8d0bdbe70bc313ffd6d7dc7d8896c5da249d2eca271a27a982d57cd83fcf617 SHA512 6cb85018f12cafd50e71f91d36f23157d9b8b3a1d9074b2204de3c77bfe706baabcc86ec11bfb99b96de6924a10a4a1e3cf9c28e0ce174bf54de3998b2292ff3 WHIRLPOOL 67ba68d2c2bee06218fca783d8c4f130bbc93bdabf6ae2bc195bbd058919e54e43a732486cb25597faa88d1ce5196b38e0ef5501eda2e925894a49f4fcb3a7bb
+EBUILD blaze-html-0.6.1.3.ebuild 1285 SHA256 84c04746cd39e298353c3320a102a4761fab84ceaacfcec29545c4347c2a596a SHA512 d29dc58852ca8e5bf5fab2f4c8e4bfaf0cbc48fe2c5e4969c3942cf9d38fbdaa7b16ea52596e96f317b676b0916ec4a3aec4039d9305681f8714e2ced732ccff WHIRLPOOL c6c9d42e1fcb19ed6cf7955b2a6ad69534885bf7bc4fe2db30343d43d6e8717a0c826aa28f1fe263cb4a013dd065c240616052b216337606b0f8a4f86625b3cc
+MISC ChangeLog 2029 SHA256 d8d83890607dc5c9ed9238fb878f9c5d7a7b278da2c9abf45b12003a9a6afcca SHA512 db1fd2928c7df86d6774eda9dfeb4af59f1a251d9c3f7c11c3dbfe9bb026aeab6fef830d587595072ed7aec9eac3429bca18f2529bdd8d690dfa1de2dc6573b9 WHIRLPOOL 9d0756dbac07190713d9cc51293097f01c2e73b53d7f281aa3b69851aaa7ea88789b26fd34289d2e1bf6a6570bc210c7f933c4fe51628269d977a1820b1ce79e
 MISC metadata.xml 475 SHA256 2d34290252e2e547c9c3243767d23b03ea84c40c65e8ca84a8d6913a583eafec SHA512 b3bef14f2688b82795c69cf1eee240f2b23c5c2ac5c6ee96a0a22e24f7fd18ac097df2d9a136dd585273d2dae1c94ecfed359d4ad1560146244fbfe23bdbc0fa WHIRLPOOL 71988417867599a148ba1d6ec0c9961f9cf970f95b8690b574348ea7d06eca613fc3ffc80bb2f6dbc5bc70274cfe75d56b53eeae237a104c19746efb92e9a1e0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKm51wACgkQoBEVQmGOlx+smwEAg1hSO1eZlcEfwfiaT9Q2X2a9
-IVpfe2cu2D2mVO/3JVwA/3DZPaHlxSqD1rH96E9Dnt7OvfMGd27URn1Dl6pyvmgi
-=BmZF
+iQF8BAEBCABmBQJTDuRPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwMTlGQTEwRTVCMUJCNjdFRDM5Qzg3RjdF
+QUQ1MEQ2NEQ4RDM1NzFBAAoJEOrVDWTY01ca/UkH/01ITUDYlv6WkY1+vM3u6PQb
+tsLYpB0tt+hYpRg06yJ5ZS+97aExpxQyRZqTIfLRPMBBbMENsq/61ZlaEK61OjWv
+HqPl+0wxWbJypyNTHJIn8JPcSr9lziaciutamKmxQaLPD3LbN2Rc3yE68iWuyCxC
+zPptDHMVtkhtml++e2mkQ0x/Gj8m8855YX6fIYbItCHUN1htAFrth0vacf4chtWB
+RwUuLW6T01Ez9DdNHxNBdp0tLE2fY0pUvmPLOpsWfD4goE14MnsFAEFnXlRVlS7Y
++LeioQwkQnA3YzVluowbKIxgzvwbCvNfYXcdJrC5S57+5NtPk+uLmfCLjGVS+eI=
+=CwrR
 -----END PGP SIGNATURE-----
