@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/blaze-html
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/blaze-html/ChangeLog,v 1.10 2013/12/10 10:10:44 gienah Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/blaze-html/ChangeLog,v 1.11 2014/02/27 07:07:53 qnikst Exp $
+
+*blaze-html-0.6.1.3 (27 Feb 2014)
+
+  27 Feb 2014; Alexander Vershilov <qnikst@gentoo.org>
+  +blaze-html-0.6.1.3.ebuild, blaze-html-0.6.1.2.ebuild:
+  add new version
 
 *blaze-html-0.6.1.2 (10 Dec 2013)
 
